--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -60,7 +60,7 @@
 
               <li  class="active"><a><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> 我的工作平台 </font></font><span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
-                  <li><a  th:href="daibanliebiao"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">代办列表</font></font></a></li>
+                  <li><a th:target="fr" th:href="daibanliebiao"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">代办列表</font></font></a></li>
 
                   <li><a target="fr" th:href="gaimima"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">修改密码</font></font></a></li>
 
@@ -69,37 +69,37 @@
               <li><a><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">系统设置 </font></font><span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
                   <li><a target="fr" th:href="org"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">组织结构设置</font></font></a></li>
-                  <li><a href="form_advanced.html"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">用户管理</font></font></a></li>
-                  <li><a href="form_validation.html"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">职位设置</font></font></a></li>
-                  <li><a href="form_wizards.html"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">职称设置</font></font></a></li>
-                  <li><a href="form_upload.html"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">酬薪项目设置</font></font></a></li>
+                  <li><a th:target="fr" href="yonghuguanli"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">用户管理</font></font></a></li>
+                  <li><a th:target="fr" href="zhiweiguanli"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">职位设置</font></font></a></li>
+                  <li><a th:target="fr" href="zhichengshezhi"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">职称设置</font></font></a></li>
+                  <li><a th:target="fr" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">酬薪项目设置</font></font></a></li>
 
                 </ul>
               </li>
               <li><a><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">酬薪管理 </font></font><span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu" style="display: block;">
-                  <li class="current-page"><a href="general_elements.html"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">酬薪标准管理</font></font></a></li>
-                  <li><a href="media_gallery.html"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">酬薪发放管理</font></font></a></li>
+                  <li th:target="fr" class="current-page"><a href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">酬薪标准管理</font></font></a></li>
+                  <li><a th:target="fr" href="/xinchoufafangguanli"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">酬薪发放管理</font></font></a></li>
 
                 </ul>
               </li>
               <li><a><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> 人事管理</font></font><span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
-                  <li><a href="tables.html"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">人事档案管理</font></font></a></li>
+                  <li><a th:target="fr" href="registerList"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">人事档案管理</font></font></a></li>
 
                 </ul>
               </li>
               <li><a><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> 培训管理 </font></font><span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
-                  <li><a href="chartjs.html"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">培训计划</font></font></a></li>
-                  <li><a href="chartjs2.html"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">培训复合</font></font></a></li>
-                  <li><a href="morisjs.html"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">培训考核与反馈</font></font></a></li>
+                  <li><a th:target="fr" href="chartjs.html"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">培训计划</font></font></a></li>
+                  <li><a th:target="fr" href="chartjs2.html"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">培训复合</font></font></a></li>
+                  <li><a th:target="fr" href=""><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">培训考核与反馈</font></font></a></li>
 
                 </ul>
               </li>
               <li><a><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">数据分析 </font></font><span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
-                  <li><a href="fixed_sidebar.html"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">职员明细表</font></font></a></li>
+                  <li><a th:target="fr" href="zhiyuanmingxibiao"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">职员明细表</font></font></a></li>
                 </ul>
               </li>
             </ul>
@@ -121,7 +121,9 @@
           </div>
           <ul class="nav navbar-nav navbar-right">
             <li role="presentation" class="dropdown">
-              欢迎：  部门 ：        职责：      退出&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              欢迎：<span th:text="${session.userSession.userName}" ></span> 部门 ：<span th:text="${session.userSession.dataName}" ></span>
+              职责：<span th:text="${session.userSession.depName}" ></span>
+              退出&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             </li>
           </ul>
         </nav>
@@ -131,7 +133,7 @@
 
     <!-- page content -->
     <div class="right_col" role="main">
-        <iframe name="fr" frameborder="" marginwidth="" marginheight=""  width="1029px" height="1029" src="org"
+        <iframe name="fr" frameborder="" marginwidth="" marginheight=""  width="1029px" height="1029" src="daibanliebiao"
                 scrolling="no"></iframe>
     </div>
     <!-- /page content -->
