--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -60,7 +60,7 @@
 
               <li  class="active"><a><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> 我的工作平台 </font></font><span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
-                  <li><a th:target="fr" th:href="daibanliebiao"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">代办列表</font></font></a></li>
+                  <li><a th:target="fr" th:href="waitList"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">代办列表</font></font></a></li>
 
                   <li><a target="fr" th:href="gaimima"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">修改密码</font></font></a></li>
 
@@ -89,14 +89,14 @@
 
                 </ul>
               </li>
-              <li><a><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> 培训管理 </font></font><span class="fa fa-chevron-down"></span></a>
+              <!--<li><a><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> 培训管理 </font></font><span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
                   <li><a th:target="fr" href="chartjs.html"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">培训计划</font></font></a></li>
                   <li><a th:target="fr" href="chartjs2.html"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">培训复合</font></font></a></li>
                   <li><a th:target="fr" href=""><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">培训考核与反馈</font></font></a></li>
 
                 </ul>
-              </li>
+              </li>-->
               <li><a><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">数据分析 </font></font><span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
                   <li><a th:target="fr" href="zhiyuanmingxibiao"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">职员明细表</font></font></a></li>
@@ -133,7 +133,7 @@
 
     <!-- page content -->
     <div class="right_col" role="main">
-        <iframe name="fr" frameborder="" marginwidth="" marginheight=""  width="1029px" height="1029" src="daibanliebiao"
+        <iframe name="fr" frameborder="" marginwidth="" marginheight=""  width="100%" height="1029" src="register"
                 scrolling="no"></iframe>
     </div>
     <!-- /page content -->
