--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -273,7 +273,7 @@
 						<div class="form-group">
 							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="registerPerson">登记人:</label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
-								<input type="text" th:value="${session.userSession.userName}" id="registerPerson" name="registerPerson" required="required" class="form-control col-md-7 col-xs-12">
+								<input type="text" th:value="${session.userSession.userName}" readonly id="registerPerson" name="registerPerson" required="required" class="form-control col-md-7 col-xs-12">
 							</div>
 						</div>
 					</li>
