--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -60,7 +60,7 @@
 
               <li  class="active"><a><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> 我的工作平台 </font></font><span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
-                  <li><a th:target="fr" th:href="daibanliebiao"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">代办列表</font></font></a></li>
+                  <li><a th:target="fr" th:href="waitList"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">代办列表</font></font></a></li>
 
                   <li><a target="fr" th:href="gaimima"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">修改密码</font></font></a></li>
 
