--- a/src/main/resources/templates/daibanliebiao.html
+++ b/src/main/resources/templates/daibanliebiao.html
@@ -52,11 +52,11 @@
             <li>
                 <div class="form-group">
                     <label class="control-label col-md-3 col-sm-3 col-xs-12">待办类型:</label>
-                    <div class="col-md-6 col-sm-6 col-xs-12">
+                    <div class="col-md-8 col-sm-8 col-xs-12">
                         <div class="col-md-9 col-sm-9 col-xs-12">
                             <select class="form-control" name="reviewStatus">
                                 <option value="">请选择</option>
-                                <option  th:each="dictionary:${dictionaryList}" th:if="${dictionary.getDataType()}==revStatus"
+                                <option  th:each="dictionary:${dictionaryList}" th:if="${dictionary.getDataCode()}==rs_review or  ${dictionary.getDataCode()}==rs_ca"
                                          th:text="${dictionary.dataName}" th:selected="(${dictionary.id}==${archiveTools.reviewStatus})"
                                          th:value="${dictionary.id}">
                                 </option>
@@ -66,6 +66,7 @@
                     </div>
                 </div>
             </li>
+            <button type="submit" id="slt" name="slt" class="btn btn-success">查询</button>
 
             <!--<li>
                 <div class="form-group">
@@ -108,14 +109,13 @@
                 </div>
                 &lt;!&ndash;		</div>&ndash;&gt;
             </li>-->
-            <li>
-
+          <!--  <li>
                 <div class="form-group">
                     <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
                         <button type="submit" id="slt" name="slt" class="btn btn-success">查询</button>
                     </div>
                 </div>
-            </li>
+            </li>-->
         </ul>
     </form>
 
