--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -26,28 +26,28 @@
 			list-style: none;
 		}
 		ul .lefttop{
-			width: 380px;
+			width: 30%;
 			display: inline-block;
 			height: 40px;
 			line-height: 40px;
 			vertical-align: middle;
 		}
 		ul .leftmiddle{
-			width: 400px;
+			width: 30%;
 			display: inline-block;
 			height: 45px;
 			line-height: 45px;
 			vertical-align: middle;
 		}
 		ul .leftfooter1{
-			width: 1100px;
+			width: 85%;
 			display: inline-block;
 			height: 40px;
 			line-height: 40px;
 			vertical-align: middle;
 		}
 		ul .leftfooter{
-			width: 1100px;
+			width: 85%;
 			display: inline-block;
 			height: 80px;
 			line-height: 80px;
@@ -78,11 +78,12 @@
 
 			<li class="lefttop">
 				<div class="item form-group">
-					<label class="control-label col-md-3 col-sm-3 col-xs-12" for="depName">所属部门 <span class="required">*</span>
+					<label class="control-label col-md-4 col-sm-4 col-xs-12" for="depName">所属部门 <span class="required">*</span>
 					</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<input readonly="readonly" id="depName" type="text" name="depName" data-validate-length-range="5,20" class="optional form-control col-md-7 col-xs-12">
 						<input type="hidden" id="depId" name="depId">
+						<span id="depnames"></span>
 					</div><i id="myBT"  class="fa fa-search-plus"></i>
 					<div id="yincang">
 						<ul>
@@ -96,12 +97,13 @@
 			</li>
 			<li class="lefttop">
 				<div class="form-group">
-					<label class="control-label col-md-3 col-sm-3 col-xs-12 ">档案状态</label>
+					<label class="control-label col-md-4 col-sm-4 col-xs-12 ">档案状态</label>
 					<div class="col-md-6 col-sm-6 col-xs-12" >
 						<select class="form-control" name="archStatus">
 							<option value=""> --请选择-- </option>
 							<option th:each="dictionary:${dictionaryList}" th:if="${dictionary.getDataType()}==archStatus"th:text="${dictionary.dataName}" th:value="${dictionary.id}">
 						</select>
+						<span id="archstatus"></span>
 					</div>
 				</div>
 			</li>
@@ -113,10 +115,11 @@
 			</li>
 			<li class="lefttop">
 				<div class="form-group">
-					<label class="control-label col-md-3 col-sm-3 col-xs-12">职位名称:</label>
+					<label class="control-label col-md-4 col-sm-4 col-xs-12">职位名称:</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<input readonly="readonly" id="posName" type="text" name="posName" data-validate-length-range="5,20" class="optional form-control col-md-7 col-xs-12">
 						<input type="hidden" id="posId" name="posId">
+						<span id="posnames"></span>
 					</div><i id="myBTPos"  class="fa fa-search-plus"></i>
 					<div id="psn">
 						<ul>
@@ -129,48 +132,54 @@
 			</li>
 			<li class="lefttop">
 				<div class="form-group">
-					<label class="control-label col-md-3 col-sm-3 col-xs-12">职位编码:</label>
+					<label class="control-label col-md-4 col-sm-4 col-xs-12">职位编码:</label>
 					<div class="col-md-6 col-sm-6 col-xs-12" id="strs">
 
 						<input type="text" id="posCode" name="posCode" value=""
 							   readonly  required="required" class="form-control col-md-7 col-xs-12">
+						<span id="poscodes"></span>
 					</div>
 				</div>
 			</li>
 			<li class="lefttop"></li>
 			<li class="lefttop">
 				<div class="form-group">
-					<label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">姓名:</label>
+					<label class="control-label col-md-4 col-sm-4 col-xs-12" for="name">姓名:</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<input type="text" id="name" name="name" value="" class="form-control col-md-7 col-xs-12">
+						<span id="names"></span>
 					</div>
+
 				</div>
 			</li>
 			<li class="lefttop">
 				<div class="form-group">
-					<label class="control-label col-md-3 col-sm-3 col-xs-12">性别:</label>
+					<label class="control-label col-md-4 col-sm-4 col-xs-12">性别:</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<select class="form-control" name="gender">
 							<option value="0"> --请选择-- </option>
 							<option th:each="dictionary:${dictionaryList}" th:if="${dictionary.getDataType()}==gender"th:text="${dictionary.dataName}" th:value="${dictionary.id}">
 						</select>
+						<span id="sex"></span>
 					</div>
 				</div>
 			</li>
 			<li class="lefttop"></li>
 			<li class="lefttop">
 				<div class="form-group">
-					<label class="control-label col-md-3 col-sm-3 col-xs-12" for="email">EMAIL:</label>
+					<label class="control-label col-md-4 col-sm-4 col-xs-12" for="email">EMAIL:</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<input type="text" id="email" name="email" required="required" class="form-control col-md-7 col-xs-12">
+						<span id="emails"></span>
 					</div>
 				</div>
 			</li>
 			<li class="lefttop">
 				<div class="form-group">
-					<label class="control-label col-md-3 col-sm-3 col-xs-12" for="phoneNumber">联系电话:</label>
+					<label class="control-label col-md-4 col-sm-4 col-xs-12" for="phoneNumber">联系电话:</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<input type="text" id="phoneNumber" name="phoneNumber" required="required" class="form-control col-md-7 col-xs-12">
+						<span id="phonenumbers"></span>
 					</div>
 				</div>
 			</li>
@@ -179,115 +188,126 @@
 			</li>
 			<li class="leftmiddle">
 				<div class="form-group">
-					<label class="control-label col-md-3 col-sm-3 col-xs-12">身份证号:</label>
+					<label class="control-label col-md-4 col-sm-4 col-xs-12">身份证号:</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<input type="text" id="idNumber" name="idNumber" required="required" class="form-control col-md-7 col-xs-12">
+						<span id="idnumbers"></span>
 					</div>
 				</div>
 			</li>
 			<li class="leftmiddle">
 				<div class="form-group">
-					<label class="control-label col-md-3 col-sm-3 col-xs-12">户口所在地:</label>
+					<label class="control-label col-md-4 col-sm-4 col-xs-12">户口所在地:</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<input type="text" id="account" name="account" required="required" class="form-control col-md-7 col-xs-12">
+						<span id="accounts"></span>
 					</div>
 				</div>
 			</li>
 			<li class="leftmiddle">
 				<div class="form-group">
-					<label class="control-label col-md-3 col-sm-3 col-xs-12">政治面貌:</label>
+					<label class="control-label col-md-4 col-sm-4 col-xs-12">政治面貌:</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<select class="form-control" name="political">
 							<option value="0"> --请选择-- </option>
 							<option th:each="dictionary:${dictionaryList}" th:if="${dictionary.getDataType()}==political" th:text="${dictionary.dataName}" th:value="${dictionary.id}">
 
 						</select>
+						<span id="politicals"></span>
 					</div>
 				</div>
 			</li>
 			<li class="leftmiddle">
 				<div class="form-group">
-					<label class="control-label col-md-3 col-sm-3 col-xs-12" for="school">毕业院校:</label>
+					<label class="control-label col-md-4 col-sm-4 col-xs-12" for="school">毕业院校:</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<input type="text" id="school" name="school" required="required" class="form-control col-md-7 col-xs-12">
+						<span id="schools"></span>
 					</div>
 				</div>
 			</li>
 			<li class="leftmiddle">
 				<div class="form-group">
-					<label class="control-label col-md-3 col-sm-3 col-xs-12" for="major">专业:</label>
+					<label class="control-label col-md-4 col-sm-4 col-xs-12" for="major">专业:</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<input type="text" id="major" name="major" required="required" class="form-control col-md-7 col-xs-12">
+						<span id="majors"></span>
 					</div>
 				</div>
 			</li>
 			<li class="leftmiddle">
 				<div class="form-group">
-					<label class="control-label col-md-3 col-sm-3 col-xs-12">学历</label>
+					<label class="control-label col-md-4 col-sm-4 col-xs-12">学历</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<select class="form-control" name="education">
 							<option value="0"> --请选择-- </option>
 							<option th:each="dictionary:${dictionaryList}" th:if="${dictionary.getDataType()}==education"th:text="${dictionary.dataName}" th:value="${dictionary.id}">
 
 						</select>
+						<span id="educations"></span>
 					</div>
 				</div>
 			</li>
 			<li class="leftmiddle">
 				<div class="form-group">
-					<label class="control-label col-md-3 col-sm-3 col-xs-12">薪酬标准</label>
+					<label class="control-label col-md-4 col-sm-4 col-xs-12">薪酬标准</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<select class="form-control" name="salaryStandard">
 							<option value="0"> --请选择-- </option>
 							<option th:each="dictionary:${dictionaryList}" th:if="${dictionary.getDataType()}==salaryStd"th:text="${dictionary.dataName}" th:value="${dictionary.id}">
 
 						</select>
+						<span id="salarystandards"></span>
 					</div>
 				</div>
 			</li>
 			<li class="leftmiddle">
 				<div class="form-group">
-					<label class="control-label col-md-3 col-sm-3 col-xs-12" for="bank">开户行:</label>
+					<label class="control-label col-md-4 col-sm-4 col-xs-12" for="bank">开户行:</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<input type="text" id="bank" name="bank" required="required" class="form-control col-md-7 col-xs-12">
+						<span id="banks"></span>
 					</div>
 				</div>
 			</li>
 			<li class="leftmiddle">
 				<div class="form-group">
-					<label class="control-label col-md-3 col-sm-3 col-xs-12" for="bankCard">银行卡号:</label>
+					<label class="control-label col-md-4 col-sm-4 col-xs-12" for="bankCard">银行卡号:</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<input type="text" id="bankCard" name="bankCard" required="required" class="form-control col-md-7 col-xs-12">
+						<span id="bankcards"></span>
 					</div>
 				</div>
 			</li>
 			<li class="leftmiddle">
 				<div class="form-group">
-					<label class="control-label col-md-3 col-sm-3 col-xs-12" for="sscNumber">社保卡号:</label>
+					<label class="control-label col-md-4 col-sm-4 col-xs-12" for="sscNumber">社保卡号:</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<input type="text" id="sscNumber" name="sscNumber" required="required" class="form-control col-md-7 col-xs-12">
+						<span id="sscnumbers"></span>
 					</div>
 				</div>
 			</li>
 			<li class="leftmiddle">
 				<div class="form-group">
-					<label class="control-label col-md-3 col-sm-3 col-xs-12" for="registerPerson">登记人:</label>
+					<label class="control-label col-md-4 col-sm-4 col-xs-12" for="registerPerson">登记人:</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<input type="text" th:value="${session.userSession.userName}" readonly id="registerPerson" name="registerPerson" required="required" class="form-control col-md-7 col-xs-12">
+						<span id="registerpersons"></span>
 					</div>
 				</div>
 			</li>
 			<li class="leftmiddle">
 				<div class="form-group">
-					<label class="control-label col-md-3 col-sm-3 col-xs-12">建档时间:</label>
-					<div class="col-md-6 col-sm-6 col-xs-12">
+					<label class="control-label col-md-4 col-sm-4 col-xs-12">建档时间:</label>
+					<div class="col-md-8 col-sm-8 col-xs-12">
 						<fieldset>
 							<div class="control-group">
 								<div class="controls">
 									<div class="col-md-11 xdisplay_inputx form-group has-feedback">
-										<input type="text"
-											   class="form-control has-feedback" id="single_cal2" name="beginTime" aria-describedby="inputSuccess2Status2">
-
+										<input type="text" value=""
+											   class="form-control has-feedback" id="single_cal2" name="createDate" aria-describedby="inputSuccess2Status2">
+										<span id="text"></span>
 									</div>
 								</div>
 							</div>
@@ -298,43 +318,48 @@
 			</li>
 			<li class="leftfooter1">
 				<div class="form-group">
-					<label class="control-label col-md-1 col-sm-1 col-xs-12" for="address">住址:</label>
-					<div class="col-md-11 col-sm-11 col-xs-12">
+					<label class="control-label col-md-2 col-sm-2 col-xs-12" for="address">住址:</label>
+					<div class="col-md-10 col-sm-10 col-xs-12">
 						<input type="text" id="address" name="address" required="required" class="form-control col-md-7 col-xs-12">
+						<span id="addreesss"></span>
 					</div>
 				</div>
 			</li>
 			<li class="leftfooter">
 				<div class="form-group">
-					<label class="control-label col-md-1 col-sm-1 col-xs-12" for="resumePath">个人履历:</label>
-					<div class="col-md-11 col-sm-11 col-xs-12">
+					<label class="control-label col-md-2 col-sm-2 col-xs-12" for="resumePath">个人履历:</label>
+					<div class="col-md-10 col-sm-10 col-xs-12">
 						<textarea class="form-control" id="resumePath" name="resumePath"></textarea>
+						<span id="resumepaths"></span>
 					</div>
 				</div>
 				<br/>
 			</li><br/>
 			<li class="leftfooter">
 				<div class="form-group">
-					<label class="control-label col-md-1 col-sm-1 col-xs-12" for="family">家庭关系:</label>
-					<div class="col-md-11 col-sm-11 col-xs-12">
+					<label class="control-label col-md-2 col-sm-2 col-xs-12" for="family">家庭关系:</label>
+					<div class="col-md-10 col-sm-10 col-xs-12">
 						<textarea class="form-control" id="family" name="family"></textarea>
+						<span id="familys"></span>
 					</div>
 				</div>
 			</li><br/>
 			<li class="leftfooter">
 				<div class="form-group">
-					<label class="control-label col-md-1 col-sm-1 col-xs-12" for="remark">备注:</label>
-					<div class="col-md-11 col-sm-11 col-xs-12">
+					<label class="control-label col-md-2 col-sm-2 col-xs-12" for="remark">备注:</label>
+					<div class="col-md-10 col-sm-10 col-xs-12">
 						<textarea class="form-control" id="remark" name="remark"></textarea>
+						<span id="remarks"></span>
 					</div>
 				</div>
 
 			</li><br/>
 			<li class="leftfooter1">
 				<div class="form-group">
-					<label class="control-label col-md-1 col-sm-1 col-xs-12">简历附件:</label>
-					<div class="col-md-11 col-sm-11 col-xs-12">
+					<label class="control-label col-md-2 col-sm-2 col-xs-12">简历附件:</label>
+					<div class="col-md-10 col-sm-10 col-xs-12">
 						<input type="file" name="docFile" value="" id="annex" required="required" class="form-control col-md-7 col-xs-12" placeholder=".input-xxlarge">
+						<span id="annexs"></span>
 					</div>
 				</div>
 			</li>
@@ -359,7 +384,17 @@
 
 	</form>
 </div>
+<script>
+	$(document).ready(function () {
+		/*var name=$("#name").val();
+		var names=$("#names").val();
+		if(name==null){
+			alert(name);
+		}*/
 
+	})
+
+</script>
 
 
 
