--- a/src/main/resources/templates/registerList.html
+++ b/src/main/resources/templates/registerList.html
@@ -47,11 +47,12 @@
 	<br>
 	<form th:action="@{/registerList}" method="post" id="frm" name="frm" data-parsley-validate="" class="form-horizontal form-label-left" novalidate="">
 		<input type="hidden" name="pageIndex" id="pageIndex" value="1"/>
+
 		<ul>
 			<li>
 				<div class="form-group">
 					<label class="control-label col-md-3 col-sm-3 col-xs-12" for="archCode">档案编号:</label>
-					<div class="col-md-6 col-sm-6 col-xs-12">
+					<div class="col-md-8 col-sm-8 col-xs-12">
 						<input type="text" id="archCode" th:value="${archiveTools.archCode}" name="archCode" class="form-control col-md-7 col-xs-12">
 					</div>
 				</div>
@@ -59,7 +60,17 @@
 			<li>
 				<div class="form-group">
 					<label class="control-label col-md-3 col-sm-3 col-xs-12">审核状态:</label>
-					<div class="col-md-6 col-sm-6 col-xs-12">
+					<div class="col-md-8 col-sm-8 col-xs-12" th:if="${session.userSession.userRole}==19">
+					<select class="form-control" name="reviewStatus">
+						<option value="">请选择</option>
+						<option  th:each="dictionary:${dictionaryList}" th:if="${dictionary.getDataType()}==revStatus"
+								 th:text="${dictionary.dataName}" th:selected="(${dictionary.id}==${archiveTools.reviewStatus})"
+								 th:value="${dictionary.id}">-- 请选择 --
+						</option>
+
+					</select>
+				</div>
+					<div class="col-md-8 col-sm-8 col-xs-12" th:if="${session.userSession.userRole}==18">
 						<select class="form-control" name="reviewStatus">
 							<option value="">请选择</option>
 							<option  th:each="dictionary:${dictionaryList}" th:if="${dictionary.getDataType()}==revStatus"
@@ -71,29 +82,16 @@
 					</div>
 				</div>
 			</li>
-			<li>
-				<div class="form-group">
-					<label class="control-label col-md-3 col-sm-3 col-xs-12">档案状态:</label>
-					<div class="col-md-6 col-sm-6 col-xs-12">
-						<select class="form-control" name="archStatus">
-							<option value="">请选择</option>
-							<option  th:each="dictionary:${dictionaryList}" th:if="${dictionary.getDataType()}==archStatus"
-									 th:text="${dictionary.dataName}" th:selected="(${dictionary.id}==${archiveTools.archStatus})"
-									 th:value="${dictionary.id}">-- 请选择 --
-							</option>
-						</select>
-					</div>
-				</div>
-			</li>
+
 			<li>
 				<div class="form-group">
 					<label class="control-label col-md-3 col-sm-3 col-xs-12">建档时间:</label>
-					<div class="col-md-8 col-sm-8 col-xs-12">
+					<div class="col-md-9 col-sm-9 col-xs-12">
 						<!--	<fieldset>-->
 						<!--<div class="control-group">-->
 						<div class="controls">
 							<div class="col-md-12 xdisplay_inputx form-group has-feedback">
-								<input type="text"
+								<input type="text" readonly
 									   th:value="${#dates.format(archiveTools.bt,'MM/dd/yyyy')}"
 									   class="form-control has-feedback" id="single_cal2" name="beginTime" aria-describedby="inputSuccess2Status2">
 								<!--至
@@ -110,12 +108,12 @@
 			</li>到
 			<li>
 				<!--<div class="form-group">-->
-				<div class="col-md-8 col-sm-8 col-xs-12">
+				<div class="col-md-9 col-sm-9 col-xs-12">
 					<!--<fieldset>-->
 					<div class="control-group">
 						<div class="controls">
 							<div class="col-md-12 xdisplay_inputx form-group has-feedback">
-								<input type="text"
+								<input type="text" readonly
 									   th:value="${#dates.format(archiveTools.et,'MM/dd/yyyy')}"
 									   class="form-control has-feedback" id="single_cal3"  name="endTime" aria-describedby="inputSuccess3Status3">
 							</div>
@@ -125,6 +123,20 @@
 
 				</div>
 				<!--		</div>-->
+			</li>
+			<li>
+				<div class="form-group">
+					<label class="control-label col-md-3 col-sm-3 col-xs-12">档案状态:</label>
+					<div class="col-md-8 col-sm-8 col-xs-12">
+						<select class="form-control" name="archStatus">
+							<option value="">请选择</option>
+							<option  th:each="dictionary:${dictionaryList}" th:if="${dictionary.getDataType()}==archStatus"
+									 th:text="${dictionary.dataName}" th:selected="(${dictionary.id}==${archiveTools.archStatus})"
+									 th:value="${dictionary.id}">-- 请选择 --
+							</option>
+						</select>
+					</div>
+				</div>
 			</li>
 			<li>
 
@@ -139,7 +151,7 @@
 	</form> &nbsp;&nbsp;&nbsp;
 
 	<a th:href="@{/addArchive}">
-		<button type="button" class="btn btn-round btn-info">
+		<button type="button" class="btn btn-round btn-info" th:if="${session.userSession.userRole}==18" >
 			<font style="vertical-align: inherit;"><font style="vertical-align: inherit;">档案登记</font>
 			</font>
 		</button>
@@ -309,6 +321,7 @@
 	}
 
 	$(function(){
+		//
 
 		$(".deleteReg").click(function(){
 			if(confirm("是否要删除？")) {
